# AI_Frameworks

Langraphs/DeepAgents/: Dockerfile  README.md  langgraph.json
Langraphs/DeepAgents/DeepAgents/: docker-compose.yml  pyproject.toml  requirements.txt
Langraphs/DeepAgents/DeepAgents/soa_retail_agent/: config.py  llm.py
Langraphs/DeepAgents/DeepAgents/soa_retail_agent.egg-info/: SOURCES.txt  top_level.txt
Langraphs/DeepAgents/DeepAgents/soa_retail_agent/agents/: __init__.py  _base.py  anomaly_agent.py  forecast_agent.py  inventory_agent.py
Langraphs/DeepAgents/DeepAgents/soa_retail_agent/api/templates/: index.html
Langraphs/DeepAgents/DeepAgents/soa_retail_agent/data/: customers.csv
Langraphs/DeepAgents/DeepAgents/soa_retail_agent/tools/: __init__.py  anomaly_mock.py  competitor_pricing.py  inventory_db.py  logistics_mock.py  pos_mock.py  weather.py
Langraphs/DeepAgents/DeepAgents/tests/: __init__.py
Langraphs/DeepAgents/soa_retail_agent/: __init__.py  graph.py  state.py
Langraphs/DeepAgents/soa_retail_agent.egg-info/: PKG-INFO
Langraphs/DeepAgents/soa_retail_agent/agents/: _base.py  customer_insight_agent.py  forecast_agent.py  (+3 more)
Langraphs/DeepAgents/tests/: test_graph.py  test_tools.py
supply-chain-prompt-advisor/Backend/: .env  .env.example  Dockerfile  package-lock.json  package.json
supply-chain-prompt-advisor/Backend/src/: app.js  server.js
supply-chain-prompt-advisor/Frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
supply-chain-prompt-advisor/Frontend/src/: App.jsx  index.css  main.jsx
(+32 files in other folders)
