[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soa-retail-agent"
version = "0.1.0"
description = "Smart Operations Agent (SOA) for Retail — multi-agent system built on LangGraph"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["soa_retail_agent*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
